@@ -34,7 +34,7 @@
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
 		android:visibility="visible" android:freezesText="true">
 	</EditText>
-	<TextView android:layout_width="fill_parent"
+	<TextView android:id="@+id/alert_line3" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:layout_weight="1"
 		android:textStyle="bold" android:text="Line 3">
 	</TextView>
@@ -63,6 +63,7 @@
 	</LinearLayout>
 
 	<LinearLayout
+	    android:id="@+id/alert_softButtonsLayout"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content" >
 
